# logic

./: .gitignore  CMakeLists.txt  LICENSE  LogicGate.cpp  LogicGate.h  LogicTest.cpp  README.md  Tree.cpp  Tree.h  compilation line.txt  constants.h  docker.sh  emscripten_wrap.cpp  expressionparser  expressionparser.cpp  expressionparser.h  first_order  logic  logic-test  main.cpp  run_logic_ci.sh  shuntingyard.cpp  statement.cpp  statement.h  statementevaluator.cpp  statementevaluator.h  test.html  test.py  test1.cpp  tests.cpp  wasm_build.sh
.github/workflows/: ccpp.yml  test.yml  wasm.yml
LogicGate testing/: LogicGate.cpp  LogicGate.h  a.out
first-order/: FirstOrderTree.cpp  FirstOrderTree.h  ProofChecker.cpp  ProofChecker.h  ProofCheckerTest.cpp  test.cpp  treeTest.cpp
tests/: sampletest.cpp
